--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
       "@types/node": "^16.7.13",
       "@types/react": "^18.0.0",
       "@types/react-dom": "^18.0.0",
+      "@types/react-router-dom": "^5.3.3",
+      "loader": "^2.1.1",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
+      "react-router-dom": "^6.4.3",
       "react-scripts": "5.0.1",
+      "scss": "^0.2.4",
       "typescript": "*",
       "web-vitals": "^2.1.0"
    },
