--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,42 +20,32 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": [
-        "react",
-        "import",
-        "prettier",
-        "react-hooks",
-        "@typescript-eslint"
+    "plugins": ["react", "import", "prettier", "react-hooks", "@typescript-eslint"],
+    "overrides": [
+        {
+            "files": [
+                ".js",
+                ".ts",
+                ".jsx",
+                ".tsx",
+                "**/*.spec.js",
+                "**/*.test.ts",
+                "**/*.test.tsx",
+                "**/*.spec.tsx"
+            ]
+        }
     ],
-    "overrides": [{ "files": [
-        ".js",
-        ".ts",
-        ".jsx",
-        ".tsx",
-        "**/*.spec.js",
-        "**/*.test.ts",
-        "**/*.test.tsx",
-        "**/*.spec.tsx"
-    ] }],
     "rules": {
         "import/order": [
             "error",
             {
                 "newlines-between": "always",
-                "pathGroupsExcludedImportTypes": [
-                    "react"
-                ],
+                "pathGroupsExcludedImportTypes": ["react"],
                 "alphabetize": {
                     "order": "asc",
                     "caseInsensitive": true
                 },
-                "groups": [
-                    "builtin",
-                    "external",
-                    "parent",
-                    "sibling",
-                    "index"
-                ],
+                "groups": ["builtin", "external", "parent", "sibling", "index"],
                 "pathGroups": [
                     {
                         "pattern": "react",
@@ -65,14 +55,27 @@
                 ]
             }
         ],
+        "jsx-a11y/label-has-associated-control": [
+            2,
+            {
+                "assert": "either"
+            }
+        ],
+        "no-underscore-dangle": ["off", { "allow": [] }],
+        "camelcase": "off",
         "import/extensions": "off",
         "import/prefer-default-export": "off",
         "consistent-return": "off",
+        "default-param-last": 0,
         "padding-line-between-statements": [
             "error",
-            { "blankLine": "always", "prev": "*", "next": "return"},
-            { "blankLine": "always", "prev": ["const", "let", "var"], "next": "*"},
-            { "blankLine": "any", "prev": ["const", "let", "var"], "next": ["const", "let", "var"]}
+            { "blankLine": "always", "prev": "*", "next": "return" },
+            { "blankLine": "always", "prev": ["const", "let", "var"], "next": "*" },
+            {
+                "blankLine": "any",
+                "prev": ["const", "let", "var"],
+                "next": ["const", "let", "var"]
+            }
         ],
         "no-shadow": "off",
         "no-debugger": "error",
@@ -83,18 +86,21 @@
                 "ignore": [
                     0,
                     1,
+                    2,
+                    3,
+                    4,
                     -1
                 ]
             }
         ],
         "no-use-before-define": "off",
-        "no-param-reassign": ["error", {
-            "props": true,
-            "ignorePropertyModificationsFor": [
-                "state",
-                "self"
-            ]
-        }],
+        "no-param-reassign": [
+            "error",
+            {
+                "props": true,
+                "ignorePropertyModificationsFor": ["state", "self"]
+            }
+        ],
         "react/display-name": "off",
         "react/react-in-jsx-scope": "off",
         "react/require-default-props": "off",
@@ -116,9 +122,12 @@
                 "unnamedComponents": "arrow-function"
             }
         ],
-        "react/jsx-props-no-spreading": [0, {
-            "html": "ignore"
-        }],
+        "react/jsx-props-no-spreading": [
+            0,
+            {
+                "html": "ignore"
+            }
+        ],
         "@typescript-eslint/no-unused-vars": ["error"],
         "@typescript-eslint/explicit-function-return-type": [
             "error",
