--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "semi": true,
-  "tabWidth": 3,
-  "printWidth": 100,
-  "singleQuote": true,
-  "bracketSpacing": true,
-  "arrowParens": "avoid",
-  "trailingComma": "all"
+   "semi": true,
+   "tabWidth": 3,
+   "printWidth": 100,
+   "singleQuote": true,
+   "bracketSpacing": true,
+   "arrowParens": "avoid",
+   "trailingComma": "all",
+   "endOfLine": "auto"
 }
